--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,13 @@
 <resources>
-    <string name="app_name">DevIntensive</string>
+    <string name="app_name">Трищенков Алексей</string>
+    <string name="mobile_number">+7(962)190-43-43</string>
+    <string name="mobile_number_string">Мобильный</string>
+    <string name="email">capert@mail.ru</string>
+    <string name="email_string">E-mail</string>
+    <string name="profile_vk">vk.com/capert</string>
+    <string name="profile_vk_String">Профиль в VK</string>
+    <string name="github_repo">https://github.com/Capert/DevIntensive</string>
+    <string name="github_repo_string">Репозиторий</string>
+    <string name="about">...</string>
+    <string name="about_string">О себе</string>
 </resources>
